manifests/apps/homepage/homepage.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: apps
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-rw
              mountPath: /app/config
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: config
              mountPath: /app/config/custom.css
              subPath: custom.css
            - name: config
              mountPath: /app/config/custom.js
              subPath: custom.js
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config-rw
          emptyDir: {}
        - name: config
          configMap:
            name: homepage-config

---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: apps
spec:
  selector:
    app: homepage
  ports:
    - port: 3000

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`home.kwe2.org`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls: {}
